Fix text-overflow bug

--- a/front/src/app/reader/reader.component.sass
+++ b/front/src/app/reader/reader.component.sass
@@ -24,7 +24,6 @@
 .content
   grid-area: content
   overflow-y: hidden
-  padding: 0 8px
   display: grid
   justify-content: center
 
