--- a/front/src/rules.sass
+++ b/front/src/rules.sass
@@ -1,2 +1,8 @@
 .pointer
   cursor: pointer
+
+.hidden
+  display: none;
+
+.invisible
+  visibility: hidden
